--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="csS/utils.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Home</title>
+    <title>Small HTML, CSS and JS projects</title>
   </head>
   <body class="container">
     <nav>
