--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="csS/utils.css" />
+    <link rel="stylesheet" href="css/utils.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Small HTML, CSS and JS projects</title>
   </head>
@@ -15,6 +15,9 @@
         </li>
         <li>
           <a href="/02-animated-modal/index.html">Animated modal</a>
+        </li>
+        <li>
+          <a href="/03-article-preview-card/index.html">Article preview card</a>
         </li>
       </ul>
     </nav>
