--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li>
           <a href="/03-article-preview-card/index.html">Article preview card</a>
         </li>
+        <li>
+          <a href="/04-faq-accordion-card/index.html">FAQ accordion card</a>
+        </li>
       </ul>
     </nav>
     <h1>Home</h1>
